# myop

./: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY.md  app.py  bullfunc.py  home.txt  myop.db  pyproject.toml  userfunc.py
.github/workflows/: docker.yml
static/: bulletinStyle.css  bulletins.js  config.js  mainStyle.css  nav.js
templates/: add_user.html  bt.html  bulletins.html  chat.html  control.html  disabled.html  login.html  main.html  view_bulletin.html  view_user.html
